# concordium-misc-tools

./: .dockerignore  .gitignore  .gitmodules  Cargo.toml  README.md  package.json  rustfmt.toml
block-stats-tool/: CHANGELOG.md  Cargo.toml  README.md
block-stats-tool/src/: main.rs
chain-prometheus-exporter/: CHANGELOG.md  Cargo.toml  README.md
chain-prometheus-exporter/scripts/: build.Dockerfile  chain-prometheus-exporter.Jenkinsfile
chain-prometheus-exporter/src/: main.rs
cis2-client/: Cargo.toml
cis2-client/src/: main.rs
company-id-gui/src-tauri/: Cargo.toml  tauri.conf.json  tauri.windows.conf.json
company-id-gui/src-tauri/icons/: icon.icns
company-id-gui/src-tauri/resources/mainnet/: ars.json  ip-info.json
company-id-gui/src-tauri/resources/testnet/: ars.json  cryptographic-parameters.json  ip-info.json
company-id-gui/src-tauri/src/: bip39.rs  main.rs
credential-verification-service/: CHANGELOG.md  Cargo.toml  Dockerfile  README.md
credential-verification-service/docs/: architecture.md
credential-verification-service/docs/api/: ErrorResponseExamples.md  tmp_doc_remove_later_api_request_basic_testing
credential-verification-service/docs/api/create_verification_request/: data_model.md  examples.md  sequence.md
credential-verification-service/docs/api/verify_presentation/: data_model.md  examples.md  sequence.md
credential-verification-service/src/: api.rs  api_types.rs  configs.rs  lib.rs  logging.rs  node_client.rs  service.rs  txn_submitter.rs  types.rs
credential-verification-service/src/api/: common.rs  create_verification_request.rs  health.rs  helpers.rs  monitoring.rs  monitroing.rs  util.rs  validate_payload.rs  verification_request.rs  verifier.rs  verify.rs
credential-verification-service/src/validation/: create_verification_api_request_validator.rs  mod.rs  requested_subject_claims_validator.rs  validation_context.rs  verify_api_request_validator.rs  very_api_request_validator.rs
credential-verification-service/tests/: dummyaccount.json  health_check.rs  integration_test.rs
credential-verification-service/tests/integration_test_helpers/: fixtures.rs  mod.rs  node_client_mock.rs  node_client_stub.rs  node_mock.rs  node_stub.rs  rest_client.rs  server.rs
credential-verification-service/tests/integration_test_monitoring/: healthcheck.rs  metrics.rs  mod.rs
credential-verification-service/tests/integration_test_rest/: create_verification_request.rs  create_verification_request_and_verify.rs  errors.rs  many_requests.rs  mod.rs  submission_status.rs  verify.rs
dump-transaction/: Cargo.toml
dump-transaction/src/: main.rs
generator/: CHANGELOG.md  Cargo.toml  README.md
generator/resources/: cis2_multi.wasm.v1  cis2_nft.wasm.v1  cis2_wccd.wasm.v1  credential_registry.wasm.v1
generator/src/: generator.rs  main.rs  plt.rs
genesis-creator/: CHANGELOG.md  Cargo.toml  README.md
genesis-creator/examples/: genesis1.toml  genesis4.toml  genesis5.toml  genesis6.toml  genesis8.toml  genesis9.toml  mainnet-assemble.toml  single-baker-example-p5.toml  single-baker-example-p6.toml  single-baker-example-p8.toml  single-validator-example-p8.toml
genesis-creator/examples/assemble-files/: accounts.json  anonymity-revokers.json  cryptographic-parameters.json  governance-keys.json  identity-providers.json
genesis-creator/scripts/macOS/: macOS-package-build-sign.sh
genesis-creator/src/: assemble.rs  config.rs  genesis.rs  lib.rs  main.rs
genesis-creator/tests/: smoke_tests.rs
id-demo/: Cargo.toml  README.md  detector.js  index.html
id-demo/src/: main.rs
id-demo/src/components/: age_in_range.rs  doc_exp_no_earlier_than.rs  document_issuer_in.rs  header.rs  in_range.rs  loader.rs  member_of.rs  mod.rs  nationality_in.rs  not_member_of.rs  residence_in.rs  reveal_attribute.rs  statement.rs  younger_than.rs
id-demo/src/models/: user.rs
id-verifier/: CHANGELOG.md  Cargo.toml  README.md
id-verifier/frontend/: .eslintignore  .eslintrc.js  README.md  package-lock.json  package.json
id-verifier/frontend/src/: Root.tsx  index.html  index.tsx  wallet-connection.tsx
id-verifier/src/: main.rs
idp-tester/: Cargo.toml
idp-tester/src/: main.rs
kpi-tracker/: .dockerignore  CHANGELOG.md  Cargo.toml  Jenkinsfile  README.md
kpi-tracker/grafana/: dashboard.json
kpi-tracker/resources/: populate-activeness.sql  schema.sql
kpi-tracker/scripts/: Dockerfile  Dockerfile.dockerignore  Jenkinsfile  compose.yml
kpi-tracker/src/: main.rs
network-dashboard-proxy/: CHANGELOG.md  Cargo.toml  README.md
network-dashboard-proxy/scripts/: build.Dockerfile  network-dashboard-proxy.Jenkinsfile
network-dashboard-proxy/src/: main.rs
node-liveness-checker/: CHANGELOG.md  Cargo.toml  Dockerfile  Jenkinsfile  README.md
node-liveness-checker/scripts/: Dockerfile  Jenkinsfile
node-liveness-checker/src/: main.rs
notification-server/: .env.template  .gitignore  CHANGELOG.md  Cargo.toml  Makefile  README.md  docker-compose.yml
notification-server/docs/diagrams/: notification-server.drawio
notification-server/resources/: 000-schema.sql  Dockerfile  schema.sql
notification-server/scripts/: Dockerfile
notification-server/src/: database.rs  fcm.rs  google_cloud.rs  lib.rs  main.rs  models.rs  notification_information.rs  processor.rs
notification-server/src/models/: device.rs  notification.rs
notification-server/test-device/: firebase-messaging-sw.js  index.html
recover-id-object/: .dockerignore  CHANGELOG.md  Cargo.toml  README.md
recover-id-object/scripts/: Dockerfile  build.Dockerfile
recover-id-object/src/: main.rs
state-compare/: CHANGELOG.md  Cargo.toml  README.md
state-compare/src/: lib.rs  macros.rs  main.rs  protocol_level_token_compare.rs  token_compare.rs
state-compare/tests/: protocol_level_token_compare.rs  token_compare.rs
wallet-connect-test-bench/smart-contract/: Cargo.toml  README.md
wallet-connect-test-bench/smart-contract/src/: lib.rs
wallet-proxy-load-simulator/: Cargo.toml  README.md
wallet-proxy-load-simulator/src/: main.rs
web3id-test/: Cargo.toml
web3id-test/src/: lib.rs  main.rs
(+77 files in other folders)
