[workspace]
resolver = "2"

# Smart contracts currently has to be standalone crates and not part of the repo workspace
# due to how cargo-concordium verifiable build works. Hence, smart contract crates in the repo
# are not members of the workspace.
members = [
   "chain-prometheus-exporter",
   "generator",
   "genesis-creator",
   "id-verifier",
   "kpi-tracker",
   "notification-server",
   "recover-id-object",
   "state-compare",
   "wallet-proxy-load-simulator",
   # Does currently not compile in CI, it can be added once it works
   #"company-id-gui/src-tauri"
]

# Exclude crates in submodules
exclude = ["deps"]

[workspace.dependencies]
concordium-rust-sdk = { path = "deps/concordium-rust-sdk" }
concordium_base = { path = "deps/concordium-rust-sdk/concordium-base/rust-src/concordium_base" }
key_derivation = { path = "deps/concordium-rust-sdk/concordium-base/rust-src/key_derivation/" }
misc_tools = { path = "deps/concordium-rust-sdk/concordium-base/rust-bins" }

