[workspace]
resolver = "2"

# Smart contracts currently has to be standalone crates and not part of the repo workspace
# due to how cargo-concordium verifiable build works. Hence, smart contract crates in the repo
# are not members of the workspace.
members = [
   "chain-prometheus-exporter",
   "generator",
   "genesis-creator",
   "id-verifier",
   "kpi-tracker",
   "notification-server",
   "recover-id-object",
   "state-compare",
   "wallet-proxy-load-simulator",
   # Does currently not compile in CI, it can be added once it works
   #"company-id-gui/src-tauri"
]

# Exclude crates in submodules
exclude = ["deps"]

[workspace.dependencies]
tokio = { version = "1.27" }
tonic = { version = "0.12" }
warp = "0.3"
serde = { version = "1.0" }
serde_json = "1.0"
log = "0.4.11"
env_logger = "0.10"
clap = { version = "4.5" }
anyhow = "1.0"
chrono = "0.4.24"
thiserror = "2.0"
rand = "0.8"
futures = "0.3"
axum = "0.6"
tracing-subscriber = { version = "0.3" }
tracing = { version = "0.1" }
tower-http = {version = "0.4", features = ["trace", "timeout", "limit", "cors"]}
prometheus = "0.13"
rust_decimal = "1.37.2"
toml = "0.5"
ed25519-dalek = "2"
gcd = "2"
rayon = "1.5"
sha2 = "0.10"
tokio-postgres = "0.7"
axum-prometheus = { version = "0.8" }
backoff = { version = "0.4" }
deadpool-postgres = "0.14"
dotenv = "0.15"
enum-iterator = "2.1"
gcp_auth = "0.12"
num-bigint = "0.4"
reqwest = { version = "0.12" }
url = { version = "2.3" }
http = "0.2"
concordium-std = {version = "10"}
colored = "2"

concordium-rust-sdk = { path = "deps/concordium-rust-sdk" }
concordium_base = { path = "deps/concordium-rust-sdk/concordium-base/rust-src/concordium_base" }
key_derivation = { path = "deps/concordium-rust-sdk/concordium-base/rust-src/key_derivation/" }
misc_tools = { path = "deps/concordium-rust-sdk/concordium-base/rust-bins" }

