[workspace]
resolver = "2"

# Smart contracts currently has to be standalone crates and not part of the repo workspace
# due to how cargo-concordium verifiable build works. Hence, smart contract crates in the repo
# are not members of the workspace.
members = [
   "chain-prometheus-exporter",
   "credential-verification-service",
   "generator",
   "genesis-creator",
   "id-verifier",
   "kpi-tracker",
   "notification-server",
   "recover-id-object",
   "state-compare",
   "wallet-proxy-load-simulator",
   # Does currently not compile in CI, it can be added once it works
   #"company-id-gui/src-tauri"
]

# Exclude crates in submodules
exclude = ["deps"]

[workspace.dependencies]
anyhow = "1.0"
async-trait = "0.1.89"
assert_matches = "1.5.0"
axum = { version = "0.8", features = ["http2"]}
axum-prometheus = { version = "0.8" }
backoff = { version = "0.4" }
chrono = "0.4.24"
clap = { version = "4.5", features = ["derive", "env", "cargo"] }
colored = "2"
deadpool-postgres = "0.14"
dotenv = "0.15"
ed25519-dalek = "2"
enum-iterator = "2.1"
env_logger = "0.10"
futures = "0.3"
futures-util = "0.3"
gcd = "2"
gcp_auth = "0.12"
hex = "0.4.3"
http = "0.2"
log = "0.4.11"
num-bigint = "0.4"
parking_lot = "0.12.5"
prometheus = "0.13"
prometheus-client = "0.24"
thiserror = "2.0"
rand = "0.8"
rayon = "1.5"
reqwest = { version = "0.12" }
rust_decimal = "1.37.2"
sha2 = "0.10"
serde = { version = "1.0" }
serde_json = "1.0"
tokio = { version = "1.27", features = ["rt-multi-thread", "macros", "signal"] }
tokio-postgres = "0.7"
tokio-util = { version = "0.7", features = ["rt"] }
toml = "0.5"
tonic = { version = "0.12" }
tower-http = {version = "0.6", features = ["trace", "timeout", "limit", "cors"]}
tracing = { version = "0.1" }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
url = { version = "2.3" }
warp = "0.3"

concordium-rust-sdk = { path = "deps/concordium-rust-sdk" }
concordium_base = { path = "deps/concordium-rust-sdk/concordium-base/rust-src/concordium_base" }
key_derivation = { path = "deps/concordium-rust-sdk/concordium-base/rust-src/key_derivation/" }
misc_tools = { path = "deps/concordium-rust-sdk/concordium-base/rust-bins" }

# Optimize builds of credential-verification-service for tests since it contains
# cryptographic prover and verifier that else runs slow. Notice the
# crypto primitives are implemented in ark-ec and ark-ff, but the implementations are generic
# and monomorphized in credential-verification-service.
[profile.dev.package.credential-verification-service]
opt-level = 3

