[package]
name = "chain-prometheus-exporter"
version = "1.2.4"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow.workspace = true
tokio = { workspace = true, features = ["rt-multi-thread", "macros"] }
clap = { workspace = true, features = ["derive", "env"] }
futures.workspace = true
axum.workspace = true
tonic = {workspace = true, features = ["tls", "tls-roots", "tls-webpki-roots"]}
tracing-subscriber.workspace = true
tracing.workspace = true
tower-http = {workspace = true, features = ["trace", "timeout", "limit", "cors"]}
thiserror.workspace = true

concordium-rust-sdk.workspace = true
prometheus.workspace = true
