[package]
name = "cis2-client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"
tokio = {version = "1", features = ["rt-multi-thread", "macros"]}
clap = { version = "3", features = ["derive", "env"] }
futures = "0.3"
reqwest = {version = "0.11", features = ["json"]}

concordium-rust-sdk = { path = "../deps/concordium-rust-sdk", version = "*" }
serde_json = "1.0"
chrono = "0.4"
