[package]
name = "credential-verification-service"
version = "0.1.0"
description = "Credential verification service"
edition = "2024"

[dependencies]
anyhow.workspace = true
axum.workspace = true
chrono.workspace = true
clap.workspace = true
concordium-rust-sdk.workspace = true
futures-util.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tokio-util.workspace = true
prometheus-client.workspace = true
tracing.workspace = true

[[bin]]
name = "credential-verification-service"
path = "src/bin/service.rs"
tracing-subscriber.workspace = true
