[package]
name = "dump-transaction"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
concordium-rust-sdk = { path = "../deps/concordium-rust-sdk", version = "*" }
clap = {version = "4.5", features = ["derive"] }
anyhow = "1"
tokio = {version = "1.27", features = ["rt-multi-thread", "macros", "time"]}
tonic = {version = "0.8", features = ["tls", "tls-roots"]} # Use system trust roots.
futures = "0.3.28"
http = "0.2.9"
reqwest = {version = "0.11", features = ["json"]}
serde = {version = "1.0", features = ["derive"]}
serde_json = "1.0"