[package]
name = "generator"
version = "1.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
concordium-rust-sdk.workspace = true
clap = {version = "4", features = ["derive", "color"] }
anyhow = "1"
chrono = {version = "0.4", features = ["serde"] }
rand = "0.8"
tokio = {version = "1.27", features = ["rt-multi-thread", "macros", "time"]}
tonic = {version = "0.12", features = ["tls", "tls-roots"]} # Use system trust roots.
futures = "0.3"
serde_json = "1.0"
rust_decimal = "1.37.2"