[package]
name = "generator"
version = "1.3.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
concordium-rust-sdk.workspace = true
clap = {workspace = true, features = ["derive", "color"] }
anyhow.workspace = true
chrono = {workspace = true, features = ["serde"] }
rand.workspace = true
tokio = {workspace = true, features = ["rt-multi-thread", "macros", "time"]}
tonic = {workspace = true, features = ["tls", "tls-roots"]} # Use system trust roots.
futures.workspace = true
serde_json.workspace = true
rust_decimal.workspace = true
