[package]
name = "genesis-creator"
version = "0.4.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
concordium-rust-sdk = { path = "../deps/concordium-rust-sdk", version = "*" }
clap = {version = "3.2", features = ["derive"] }
toml = "0.5"
serde_json = "1"
rust_decimal = { version = "1.25", features = ["serde-float", "serde-arbitrary-precision"]}
anyhow = "1"
chrono = {version = "0.4", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
rand = "0.8"
ed25519-dalek = "2"
gcd = "2"
rayon = "1.5"
sha2 = "0.10"
