[package]
name = "genesis-creator"
version = "0.8.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
concordium-rust-sdk.workspace = true
concordium_base.workspace = true
clap = {workspace = true, features = ["derive"] }
toml.workspace = true
serde_json.workspace = true

rust_decimal = { workspace = true, features = ["serde-float", "serde-arbitrary-precision"]}
anyhow.workspace = true
chrono = {workspace = true, features = ["serde"] }
serde = { workspace = true, features = ["derive"] }
rand.workspace = true
ed25519-dalek.workspace = true
gcd.workspace = true
rayon.workspace = true
sha2.workspace = true

