[package]
name = "id-demo"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
yew = {version = "0.20", features = ["csr"]}
serde = { version = "1.0", features = ["derive"] }
gloo-net = "0.2.4"
gloo-console = "0.2"
wasm-bindgen-futures = "0.4"
web-sys = { version = "0.3.60", features = ["HtmlSelectElement"] }
wasm-bindgen = "0.2.83"
concordium_base = {path = "../deps/concordium-rust-sdk/concordium-base/rust-src/concordium_base/"}
serde_json = "1.0.89"
js-sys = "0.3.60"
serde-wasm-bindgen = "0.4"
