[package]
name = "id-verifier"
version = "0.4.0"
authors = ["Concordium AG <developers@concordium.com>"]
edition = "2021"
license-file = "../../LICENSE-APACHE"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { workspace = true, features = ["full"] }
tonic = { workspace = true, features = ["tls", "tls-roots"] }
warp.workspace = true
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
log.workspace = true
env_logger.workspace = true
clap = { workspace = true, features = ["derive", "env"] }
anyhow.workspace = true
chrono.workspace = true
thiserror.workspace = true
rand.workspace = true

concordium_base.workspace = true
concordium-rust-sdk.workspace = true

