[package]
name = "idp-tester"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"
tokio = {version = "1.20", features = ["rt-multi-thread", "macros"]}
clap = { version = "3", features = ["derive", "env"] }
chrono = "0.4"
reqwest = { version = "0.11", features = ["json"] }
serde_json = "1"
futures = "0.3"
rand = "0.7"
ed25519-dalek = "=1.0.0"

concordium-rust-sdk = { path = "../deps/concordium-rust-sdk", version = "*" }

[dependencies.ps_sig]
path = "../deps/concordium-rust-sdk/concordium-base/rust-src/ps_sig"
version = "0"

