[package]
name = "concordium-kpi-tracker"
version = "2.1.6"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow.workspace = true
chrono.workspace = true
clap = { workspace = true, features = ["derive", "env"] }
concordium-rust-sdk.workspace = true
env_logger.workspace = true
futures.workspace = true
log.workspace = true
tokio = { workspace = true, features = ["rt-multi-thread", "signal"] }
tokio-postgres.workspace = true

tonic = {workspace = true, features = ["tls", "tls-roots"]} # Use system trust roots.
