[package]
name = "concordium-node-liveness-checker"
version = "1.0.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
concordium-rust-sdk = { path = "../deps/concordium-rust-sdk", version = "*" }
anyhow = "1"
tokio = {version = "1.8", features = ["rt-multi-thread"]}
thiserror = "1.0.28"
clap = { version = "3", features = ["derive", "env"] }
chrono = "0.4.19"
tonic = "0.7"

