[package]
authors = ["Concordium AG developers@concordium.com"]
edition = "2021"
name = "notification-server"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.86"
axum = "0.7.5"
backoff = { version = "0.4.0", features = ["tokio"] }
bs58 = "0.5.1"
bytes = "1.6.0"
clap = { version = "4.5.7", features = ["derive", "env"] }
concordium-rust-sdk = { version = "*", path = "../deps/concordium-rust-sdk" }
deadpool-postgres = "0.14"
dotenv = "0.15"
enum-iterator = "2.1.0"
env_logger = "0.11.3"
futures = "0.3.30"
gcp_auth = "0.12.2"
lazy_static = "1.4.0"
log = "0.4.21"
num-bigint = "0.4.5"
once_cell = "1.19.0"
reqwest = { version = "0.12.5", features = ["json"] }
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.117"
tokio = { version = "1.23", features = ["rt-multi-thread", "signal"] }
tokio-postgres = "0.7"
tonic = {version = "0.10", features = ["tls", "tls-roots"]} # Use system trust roots.
tracing = { version = "0.1" }
tracing-subscriber = { version = "0.3" }

[dev-dependencies]
async-trait = "0.1.81"
mockito = "1.4.0"
quickcheck = "1.0"
quickcheck_macros = "1.0"
rand = "0.8"
sha2 = "0.10.8"

[[bin]]
path = "src/bin/api.rs"
name = "notification-api"

[[bin]]
path = "src/bin/service.rs"
name = "notification-service"
