[package]
authors = ["Concordium AG developers@concordium.com"]
edition = "2021"
name = "notification-server"
version = "0.1.8"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
axum = "0.7"
backoff = { version = "0.4", features = ["tokio"] }
bytes = "1.6"
clap = { version = "4.5", features = ["derive", "env"] }
concordium-rust-sdk = { version = "*", path = "../deps/concordium-rust-sdk" }
deadpool-postgres = "0.14"
dotenv = "0.15"
enum-iterator = "2.1"
env_logger = "0.11"
futures = "0.3"
gcp_auth = "0.12"
lazy_static = "1.4"
log = "0.4"
num-bigint = "0.4"
once_cell = "1.19"
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
tokio = { version = "1.23", features = ["rt-multi-thread", "signal"] }
tokio-postgres = "0.7"
tonic = {version = "0.10", features = ["tls", "tls-roots"]} # Use system trust roots.
tracing = { version = "0.1" }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[dev-dependencies]
async-trait = "0.1"
mockito = "1.4"
quickcheck = "1.0"
quickcheck_macros = "1.0"
rand = "0.8"
sha2 = "0.10"

[[bin]]
path = "src/bin/api.rs"
name = "notification-api"

[[bin]]
path = "src/bin/service.rs"
name = "notification-service"
