[package]
authors = ["Concordium AG developers@concordium.com"]
edition = "2021"
name = "notification-server"
version = "0.5.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow.workspace = true
axum-prometheus = { workspace = true, features = ["http-listener"] }
backoff = { workspace = true, features = ["tokio"] }
chrono.workspace = true
clap = { workspace = true, features = ["derive", "env"] }
concordium-rust-sdk.workspace = true
deadpool-postgres.workspace = true
dotenv.workspace = true
enum-iterator.workspace = true
futures.workspace = true
gcp_auth.workspace = true
num-bigint.workspace = true
reqwest = { workspace = true, features = ["json"] }
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
thiserror.workspace = true
tokio = { workspace = true, features = ["rt-multi-thread", "signal"] }
tokio-postgres.workspace = true
tonic = {workspace = true, features = ["tls", "tls-roots"]} # Use system trust roots.
tracing.workspace = true
tracing-subscriber.workspace = true


axum = "0.8" #changing this to follow workspace or changing workspace version to be 0.8 breaks build


[dev-dependencies]
async-trait = "0.1"
mockito = "1.6"
quickcheck = "1.0"
quickcheck_macros = "1.0"
rand = "0.8"
serial_test = "3.1"
sha2 = "0.10"

[[bin]]
path = "src/bin/api.rs"
name = "notification-api"

[[bin]]
path = "src/bin/service.rs"
name = "notification-service"
