[package]
name = "recover-id-object"
version = "1.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4", features = ["env", "derive"] }
anyhow = "1"
tokio = {version = "1.20", features = ["rt-multi-thread", "macros"]}
tonic = {version = "0.8", features = ["tls", "tls-roots", "tls-webpki-roots"]}
thiserror = "1"

concordium-rust-sdk = { path = "../deps/concordium-rust-sdk", version = "*" }
key_derivation = { path = "../deps/concordium-rust-sdk/concordium-base/rust-src/key_derivation/", version = "*" }
serde_json = "1.0.96"
serde = "1.0.162"
reqwest = { version = "0.11.17", features = ["json"] }
url = { version = "2.3.1", features = ["serde"] }
http = "0.2.9"
chrono = "0.4.24"
