[package]
name = "recover-id-object"
version = "2.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { workspace = true, features = ["env", "derive"] }
anyhow.workspace = true
tokio = {workspace = true, features = ["rt-multi-thread", "macros"]}
tonic = {workspace = true, features = ["tls", "tls-roots", "tls-webpki-roots"]}
thiserror.workspace = true
concordium-rust-sdk.workspace = true
key_derivation.workspace = true
serde_json.workspace = true
serde.workspace = true
reqwest = { workspace = true, features = ["json"] }
url = { workspace = true, features = ["serde"] }
http.workspace = true
chrono.workspace = true
