[package]
name = "concordium-state-compare"
version = "1.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
concordium-rust-sdk = { path = "../deps/concordium-rust-sdk", version = "*" }
anyhow = "1"
tokio = {version = "1.20", features = ["rt-multi-thread"]}
futures = "0.3"
clap = { version = "3", features = ["derive", "env"] }
chrono = "0.4"
tonic = "0.8"
serde_json = "1.0"
colored = "2"
indicatif = "0.17"
