[package]
name = "concordium-state-compare"
version = "2.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"
chrono = "0.4"
clap = { version = "4.5.11", features = ["derive", "env"] }
colored = "2"
concordium-rust-sdk = { path = "../deps/concordium-rust-sdk", version = "*" }
futures = "0.3"
indicatif = "0.17"
pretty_assertions = "1.4.0"
serde_json = "1.0"
tokio = {version = "1.20", features = ["rt-multi-thread"]}
tonic = "0.12"
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
