[package]
name = "wallet-proxy-load-simulator"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"
tokio = {version = "1.20", features = ["rt-multi-thread", "macros"]}
clap = { version = "3", features = ["derive", "env"] }
chrono = "0.4"
reqwest = { version = "0.11", features = ["json"] }
serde_json = "1"
futures = "0.3"
colored = "2"