[package]
name = "wallet-proxy-load-simulator"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow.workspace = true
tokio = {workspace = true, features = ["rt-multi-thread", "macros"]}
clap = { workspace = true, features = ["derive", "env"] }
chrono.workspace = true
reqwest = { workspace = true, features = ["json"] }
serde_json.workspace = true
futures.workspace = true
colored.workspace = true
