[workspace]
resolver = "2"

[package]
name = "company-id-gui"
version = "1.0.3"
description = "Concordium Company ID GUI"
authors = ["Concordium <developers@concordium.com>"]
license = "Apache-2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies]
tauri = { version = "1.6", features = ["clipboard-write-text", "dialog", "shell-open"] }
serde = { version = "1.0", features = ["derive"] }
key_derivation.workspace = true
misc_tools.workspace = true
concordium-rust-sdk.workspace = true
serde_json = "1.0"
bitvec = "1.0"
rand = "0.8"
tonic = { version = "0.12", features = ["tls", "tls-roots"] } # Use system trust roots.
thiserror = "1.0"
chrono = "0.4"
anyhow = "1.0"
either = "1.6"
directories = "5.0"
strum = { version = "0.25", features = ["derive"] }

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
