[package]
name = "smart_contract_test_bench"
version = "1.0.0"
authors = ["Concordium <developers@concordium.com>"]
edition = "2021"
license = "MPL-2.0"

[features]
default = ["std", "wee_alloc"]
std = ["concordium-std/std"]
wee_alloc = ["concordium-std/wee_alloc"]

[dependencies]
concordium-std = {version = "6.2.0", default-features = false}

[lib]
crate-type=["cdylib", "rlib"]

[profile.release]
panic = "abort"
opt-level = "s"
codegen-units = 1
