[package]
name = "smart_contract_test_bench"
version = "1.1.0"
authors = ["Concordium <developers@concordium.com>"]
edition = "2021"
license = "MPL-2.0"

[features]
default = ["std", "bump_alloc"]
std = ["concordium-std/std"]
bump_alloc = ["concordium-std/bump_alloc"]

[dependencies]
concordium-std = {version = "10", default-features = false}

[lib]
crate-type=["cdylib", "rlib"]
